hphp/test/slow/inout/bad-parent-1.php.expectf

Fatal error: Parameter 1 on function foo was not declared inout but is declared inout on parent function P::foo in %s/bad-parent-1.php on line 7
